[workspace]

members = [
    "light-client",
    "light-node",
    "proto",
    "rpc",
    "rpc-probe",
    "tendermint",
    "testgen"
]

exclude = [
    "proto-compiler"
]

[patch.crates-io]
prost        = { git = "https://github.com/danburkert/prost", branch = "master" }
prost-types  = { git = "https://github.com/danburkert/prost", branch = "master" }
prost-build  = { git = "https://github.com/danburkert/prost", branch = "master" }
prost-derive = { git = "https://github.com/danburkert/prost", branch = "master" }
